* Wed Apr 21 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.1.5-0
- Ensure that using a string for 'compliance_markup::enforcement' will not cause
  the server to hang
- Fix data recursion issues

* Wed Apr 21 2021 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.5-0
- Fix and document `compliance_markup::debug::dump` and
  `compliance_markup::debug::hiera_backend_compile_time` keys
- Bump puppetlabs-stdlib dependency to allow version 7

* Wed Feb 24 2021 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.4-0
- Refactor `list_puppet_params` to avoid excessive looping
- Disable caching (SIMP-9623)

* Mon Nov 02 2020 Andy Adrian <andy.adrian@onyxpoint.com> - 3.1.4-0
- Remove unused and broken telemetry functionality
- Updated the REFERENCE.md
- Removed EL 6 from support due to EOL
- Added puppet 7 testing

* Mon Nov 02 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.3-0
- Add missing `nil` check when merging controls, identifiers, and oval-ids
- Add `warn` and `debug` in outer `begin` block to avoid silent failures

* Mon Oct 05 2020 Andy Adrian <andy.adrian@onyxpoint.com> - 3.1.2-0
- Change order of import on ``compliance_markup::compliance_map`` so Hiera has
  precedence.
- This means that users may now override all settings from the underlying
  compliance maps across all modules to fit their environment specifics.

* Wed Sep 16 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.1-0
- Add tests for profile merging
- Deduplicate profile, control, ce, and check names in enforcement tests to
  avoid cross-contamination of test data
- Remove useless loops in list_puppet_params function
- Fix calls to deep_merge!
- Fix logic for merging oval-ids, controls, and identifiers
- Add begin/rescue blocks around merges to avoid problems with incorrect data

* Fri Sep 11 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.1-0
- Add controls, identifiers, and oval-ids
- Work around rspec failure