@@ -1,3 +1,7 @@
+* Wed May 19 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.1.6
+- Ensure that the same context scope is called throughout the compliance_mapper
+  enforcement
+
 * Wed Apr 21 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.1.5-0
 - Ensure that using a string for 'compliance_markup::enforcement' will not cause
   the server to hang
